2007-08-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-00
	* data: add stream support
	* db/sql: add releaseId, creator to table
	'Configurations'; remove table 'ConfigurationReleaseAssoc'; add
	tables 'Streams' and 'StreamPathAssoc; Oracle specific performance
	improvements (regarding indices / primary keys).
	* gui: The configuration panel contains a new tab, 'Streams',
	which brings up a tree view of the defined streams and the
	assigned paths and allows to manipulate them
	* the int2r hlt development schema was updated and is now only
	compatible with this version (and later)!
	
2007-08-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-01
	* rename confdb.db.CfgDatabase -> confdb.db.ConfDB
	* add confdb.db.ConfDBSetups, a property-file initialized
	repository of default db connections
	* confdb.gui.CfgMenuBar -> confdb.gui.ConfDBMenuBar, disable menu
	bar commands when they are not available
	
2007-08-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-00
	* pick up several parser fixes
	* lock all versions of a configuration while somebody is working
	on it
	* indicate that a configuration and all its version are locked in
	the 'Open' dialog; hovering over the locked node will show the
	locking user via tooltip.
	* change startGUI script not to look for java in the CMSSW
	environment

2007-08-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-03
	* gui bugfix regarding 'Remove Sequence'.

2007-08-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-02
	* fix problem where [v]string parameters initialized to [one]
	empty string would not be saved/loaded correctly.
	* Since Oracle treats '' as NULL (argh!), the Oracle db schema
	needed to be changed as well to allow 'value' to be NULL in the
	tables '[V]StringParamValues'.

2007-08-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01