@@ -11,11 +11,11 @@ confdb0.dbPort=10121
 confdb0.dbName=int2r_lb.cern.ch
 confdb0.dbUser=cms_hlt_writer
 
-confdb1.dbSetup=CMS Online (ODMS)
+confdb1.dbSetup=CMS Online (OMDS)
 confdb1.dbType=oracle
 confdb1.dbHost=oracms.cern.ch
 confdb1.dbPort=10121
-confdb1.dbName=ODMS
+confdb1.dbName=OMDS
 confdb1.dbUser=cms_hlt_writer
 
 confdb2.dbSetup=MySQL Local
